--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion '21.1.2'
+
 
     defaultConfig {
         applicationId "com.balch.auctionbrowser"
-        minSdkVersion 18
-        targetSdkVersion 22
+        minSdkVersion 21
+        targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
     }
     buildTypes {
         release {
@@ -33,10 +34,13 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.balch:app-framework:1.0.1@aar'
-    compile 'com.mcxiaoke.volley:library:1.0.+@aar'
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:cardview-v7:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.balch:app-framework:2.0@aar'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile "com.android.support:support-v4:23.1.1"
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    
     compile 'net.danlew:android.joda:2.8.0'
 }
