--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.1"
+
     }
     buildTypes {
         release {
@@ -21,6 +22,7 @@ android {
 
     productFlavors {
         demo {
+            resValue "string", "ebay_app_id", "your ID here"
         }
         secret {
         }
