--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '21.1.2'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
 
 
     defaultConfig {
         applicationId "com.balch.auctionbrowser"
         minSdkVersion 21
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "1.1"
 
@@ -29,20 +29,16 @@ android {
     }
 }
 
-repositories {
-    jcenter()
-    maven { url "https://raw.githubusercontent.com/balch/MockTrade/master/AppFramework/deploy" }
-}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.balch:app-framework:2.0@aar'
+    compile project(':AppFramework')
     compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile "com.android.support:support-v4:23.1.1"
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile "com.android.support:support-v4:25.1.0"
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
     
     compile 'net.danlew:android.joda:2.8.0'
 }
