--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,11 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     
     compile 'net.danlew:android.joda:2.8.0'
+
+    // Force usage of support annotations in the test app, since it is internally used by the runner module.
+    testCompile "com.android.support:support-annotations:25.1.0"
+    testCompile "com.android.support.test:runner:0.5"
+    testCompile "com.android.support.test:rules:0.5"
+    testCompile "org.mockito:mockito-all:1.9.5"
+
 }
