--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '25.0.2'
 
 
     defaultConfig {
@@ -33,17 +33,17 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile project(':AppFramework')
-    compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile "com.android.support:support-v4:25.1.0"
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
-    compile 'com.android.support:cardview-v7:25.1.0'
-    compile 'com.android.support:design:25.1.0'
-    
+    compile "com.android.volley:volley:1.0.0"
+    compile "com.android.support:support-v4:25.3.1"
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+
     compile 'net.danlew:android.joda:2.8.0'
 
     // Force usage of support annotations in the test app, since it is internally used by the runner module.
-    testCompile "com.android.support:support-annotations:25.1.0"
+    testCompile "com.android.support:support-annotations:25.3.1"
     testCompile "com.android.support.test:runner:0.5"
     testCompile "com.android.support.test:rules:0.5"
     testCompile "org.mockito:mockito-all:1.9.5"
