--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,16 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile project(':AppFramework')
-    compile "com.android.volley:volley:1.0.0"
+
+    compile 'com.google.code.gson:gson:2.8.0'
+
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
     compile "com.android.support:support-v4:25.3.1"
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
@@ -43,6 +52,8 @@ dependencies {
     compile "android.arch.lifecycle:runtime:1.0.0-alpha1"
     compile "android.arch.lifecycle:extensions:1.0.0-alpha1"
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha1"
+
+    compile 'com.github.bumptech.glide:glide:3.8.0'
 
     compile 'net.danlew:android.joda:2.8.0'
 
