--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 25
@@ -19,6 +18,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "browser"
 
     productFlavors {
         demo {
@@ -60,13 +61,13 @@ dependencies {
 
     compile 'com.github.bumptech.glide:glide:3.8.0'
 
-    compile 'net.danlew:android.joda:2.8.0'
+    compile 'net.danlew:android.joda:2.9.9'
 
     // Force usage of support annotations in the test app, since it is internally used by the runner module.
     testCompile "com.android.support:support-annotations:25.3.1"
     testCompile "com.android.support.test:runner:0.5"
     testCompile "com.android.support.test:rules:0.5"
-    testCompile "org.mockito:mockito-all:1.9.5"
+    testCompile "org.mockito:mockito-all:1.10.19"
 }
 
 
