--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
@@ -68,6 +70,10 @@ dependencies {
     testCompile "com.android.support.test:runner:0.5"
     testCompile "com.android.support.test:rules:0.5"
     testCompile "org.mockito:mockito-all:1.10.19"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
 
 
