--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,15 +3,16 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+
+    compileSdkVersion rootProject.compileSdkVersion
+    buildToolsVersion buildToolsVersion
 
     defaultConfig {
-        applicationId "com.balch.auctionbrowser"
-        minSdkVersion 21
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.1"
+        applicationId rootProject.applicationId
+        minSdkVersion rootProject.minSdkVersion
+        targetSdkVersion rootProject.targetSdkVersion
+        versionCode rootProject.versionCode
+        versionName rootProject.versionName
     }
 
     buildTypes {
@@ -35,42 +36,47 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation project(':AppFramework')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
-    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_logging_xcepter"
 
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation "com.google.code.gson:gson:$gson"
 
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava2"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid"
 
-    implementation "com.android.support:support-v4:25.3.1"
-    implementation 'com.android.support:appcompat-v7:25.3.1'
-    implementation 'com.android.support:recyclerview-v7:25.3.1'
-    implementation 'com.android.support:cardview-v7:25.3.1'
-    implementation 'com.android.support:design:25.3.1'
+    implementation "com.android.support:support-v4:$support"
+    implementation "com.android.support:appcompat-v7:$support"
+    implementation "com.android.support:recyclerview-v7:$support"
+    implementation "com.android.support:cardview-v7:$support"
+    implementation "com.android.support:design:$support"
 
-    implementation "android.arch.lifecycle:runtime:1.0.0-alpha1"
-    implementation "android.arch.lifecycle:extensions:1.0.0-alpha1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha1"
+    implementation "android.arch.lifecycle:runtime:$android_arch"
+    implementation "android.arch.lifecycle:extensions:$android_arch"
+    annotationProcessor "android.arch.lifecycle:compiler:$android_arch"
 
-    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation "android.arch.persistence.room:runtime:$android_arch"
+    annotationProcessor "android.arch.persistence.room:compiler:$android_arch"
+    kapt "android.arch.persistence.room:compiler:$android_arch"
+    implementation "android.arch.persistence.room:rxjava2:$android_arch"
 
-    implementation 'net.danlew:android.joda:2.9.9'
+    implementation "com.github.bumptech.glide:glide:$glide"
+
+    implementation "net.danlew:android.joda:$joda"
 
     // Force usage of support annotations in the test app, since it is internally used by the runner module.
-    testImplementation "com.android.support:support-annotations:25.3.1"
-    testImplementation "com.android.support.test:runner:0.5"
-    testImplementation "com.android.support.test:rules:0.5"
-    testImplementation "org.mockito:mockito-all:1.10.19"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    testImplementation "com.android.support:support-annotations:$support"
+    testImplementation "junit:junit:$junit"
+    testImplementation "org.mockito:mockito-core:$mockito"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 }
 repositories {
     mavenCentral()
