--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     ext.kotlin_version = '1.1.2-4'
+    ext.compileSdkVersion=25
+    ext.buildToolsVersion="25.0.3"
+    ext.applicationId="com.balch.auctionbrowser"
+    ext.minSdkVersion=21
+    ext.targetSdkVersion=25
+    ext.versionCode=1
+    ext.versionName="1.1"
+
+    ext.kotlin_version = '1.1.2-4'
+    ext.android_arch="1.0.0-alpha1"
+    ext.gson="2.8.0"
+    ext.okhttp_logging_xcepter="3.8.0"
+    ext.retrofit="2.3.0"
+    ext.rxjava2="2.1.0"
+    ext.rxandroid="2.0.1"
+    ext.support="25.3.1"
+    ext.glide="3.8.0"
+    ext.joda="2.9.9"
+    ext.support_test="0.5"
+    ext.junit="4.12"
+    ext.mockito="1.10.19"
+
     repositories {
         jcenter()
     }
