--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 buildscript {
     ext.kotlin_version = '1.1.2-4'
     ext.compileSdkVersion=25
-    ext.buildToolsVersion="25.0.3"
+    ext.buildToolsVersion="26.0.0"
     ext.applicationId="com.balch.auctionbrowser"
     ext.minSdkVersion=21
     ext.targetSdkVersion=25
@@ -10,24 +10,26 @@ buildscript {
     ext.versionName="1.1"
 
     ext.kotlin_version = '1.1.2-4'
-    ext.android_arch="1.0.0-alpha1"
+    ext.android_arch="1.0.0-alpha2"
     ext.gson="2.8.0"
     ext.okhttp_logging_xcepter="3.8.0"
     ext.retrofit="2.3.0"
     ext.rxjava2="2.1.0"
     ext.rxandroid="2.0.1"
-    ext.support="25.3.1"
+    ext.support="25.4.0"
     ext.glide="3.8.0"
     ext.joda="2.9.9"
     ext.support_test="0.5"
     ext.junit="4.12"
-    ext.mockito="1.10.19"
+    ext.mockito="2.7.22"
+    ext.timber="4.5.1"
 
     repositories {
         jcenter()
+        maven { url "https://maven.google.com" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha2'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
