--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:replace="icon">
         <activity
             android:name=".MainActivity"
-            android:label=""
+            android:label="@string/app_name"
             android:theme="@style/AppTheme"
             android:launchMode="singleTop">
             <intent-filter>
