--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     ext.versionCode=1
     ext.versionName="1.1"
 
-    ext.kotlin_version = '1.1.2-5'
+    ext.kotlin_version = '1.1.3'
     ext.android_arch="1.0.0-alpha3"
     ext.gson="2.8.0"
     ext.okhttp_logging_xcepter="3.8.0"
@@ -29,7 +29,7 @@ buildscript {
         maven { url "https://maven.google.com" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha4'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha5'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
