--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.compileSdkVersion=25
-    ext.buildToolsVersion="26.0.0"
+    ext.compileSdkVersion=26
+    ext.buildToolsVersion="26.0.1"
     ext.applicationId="com.balch.auctionbrowser"
     ext.minSdkVersion=21
-    ext.targetSdkVersion=25
+    ext.targetSdkVersion=26
     ext.versionCode=1
     ext.versionName="1.1"
 
-    ext.kotlin_version = '1.1.3'
-    ext.android_arch="1.0.0-alpha3"
+    ext.kotlin_version = '1.1.3-2'
+    ext.android_arch="1.0.0-alpha8"
     ext.gson="2.8.0"
     ext.okhttp_logging_xcepter="3.8.0"
     ext.retrofit="2.3.0"
     ext.rxjava2="2.1.0"
     ext.rxandroid="2.0.1"
-    ext.support="25.4.0"
+    ext.support="26.0.0"
     ext.glide="3.8.0"
     ext.joda="2.9.9"
     ext.support_test="0.5"
@@ -29,7 +29,7 @@ buildscript {
         maven { url "https://maven.google.com" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha5'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha9'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
