--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
     ext.retrofit="2.3.0"
     ext.rxjava2="2.1.0"
     ext.rxandroid="2.0.1"
-    ext.support="26.0.0"
+    ext.support="26.0.1"
     ext.glide="3.8.0"
     ext.joda="2.9.9"
     ext.support_test="0.5"
@@ -23,13 +23,14 @@ buildscript {
     ext.mockito="2.7.22"
     ext.timber="4.5.1"
     ext.assertj="3.5.2"
+    ext.contraint_layout="1.0.2"
 
     repositories {
         jcenter()
         maven { url "https://maven.google.com" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha9'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
