--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,13 @@ buildscript {
     ext.versionName="1.1"
 
     ext.kotlin_version = '1.1.51'
-    ext.android_arch="1.0.0-beta2"
+    ext.android_arch="1.0.0-rc1"
     ext.gson="2.8.0"
     ext.okhttp_logging_xcepter="3.8.0"
     ext.retrofit="2.3.0"
     ext.rxjava2="2.1.0"
     ext.rxandroid="2.0.1"
-    ext.support="26.1.0"
+    ext.support="27.0.0"
     ext.glide="3.8.0"
     ext.joda="2.9.9"
     ext.support_test="0.5"
@@ -30,7 +30,7 @@ buildscript {
         maven { url "https://maven.google.com" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-rc1'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
