--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     ext.versionName="1.1"
 
     ext.kotlin_version = '1.1.51'
-    ext.android_arch="1.0.0-rc1"
+    ext.android_arch="1.0.0"
     ext.gson="2.8.0"
     ext.okhttp_logging_xcepter="3.8.0"
     ext.retrofit="2.3.0"
