use Dagger2 for DI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,10 @@ android {
 
 }
 
+kapt {
+    generateStubs = true
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -47,6 +51,11 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_logging_xcepter"
 
     implementation "com.google.code.gson:gson:$gson"
+
+    implementation "com.google.dagger:dagger-android:$dagger2"
+    implementation "com.google.dagger:dagger-android-support:$dagger2"
+    kapt "com.google.dagger:dagger-android-processor:$dagger2"
+    kapt "com.google.dagger:dagger-compiler:$dagger2"
 
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
@@ -64,10 +73,10 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$android_arch"
     annotationProcessor "android.arch.lifecycle:compiler:$android_arch"
 
-    implementation "android.arch.persistence.room:runtime:$android_arch"
-    annotationProcessor "android.arch.persistence.room:compiler:$android_arch"
-    kapt "android.arch.persistence.room:compiler:$android_arch"
-    implementation "android.arch.persistence.room:rxjava2:$android_arch"
+    implementation "android.arch.persistence.room:runtime:$room"
+    annotationProcessor "android.arch.persistence.room:compiler:$room"
+    kapt "android.arch.persistence.room:compiler:$room"
+    implementation "android.arch.persistence.room:rxjava2:$room"
 
     implementation "com.github.bumptech.glide:glide:$glide"
 
