--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ apply plugin: 'kotlin-kapt'
 android {
 
     compileSdkVersion rootProject.compileSdkVersion
-    buildToolsVersion buildToolsVersion
 
     defaultConfig {
         applicationId rootProject.applicationId
@@ -40,14 +39,10 @@ android {
 
 }
 
-kapt {
-    generateStubs = true
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_logging_xcepter"
 
@@ -72,14 +67,14 @@ dependencies {
     implementation "com.android.support.constraint:constraint-layout:$contraint_layout"
 
     implementation "android.arch.lifecycle:extensions:$android_arch"
-    annotationProcessor "android.arch.lifecycle:compiler:$android_arch"
+    kapt "android.arch.lifecycle:compiler:$android_arch"
 
     implementation "android.arch.persistence.room:runtime:$room"
-    annotationProcessor "android.arch.persistence.room:compiler:$room"
     kapt "android.arch.persistence.room:compiler:$room"
     implementation "android.arch.persistence.room:rxjava2:$room"
 
     implementation "com.github.bumptech.glide:glide:$glide"
+    kapt "com.github.bumptech.glide:compiler:$glide"
 
     implementation "net.danlew:android.joda:$joda"
 
