--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,20 +58,20 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:$rxjava2"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid"
 
-    implementation "com.android.support:support-v4:$support"
-    implementation "com.android.support:appcompat-v7:$support"
-    implementation "com.android.support:recyclerview-v7:$support"
-    implementation "com.android.support:cardview-v7:$support"
-    implementation "com.android.support:design:$support"
+    implementation "androidx.legacy:legacy-support-v4:$androidx_core"
+    implementation "androidx.appcompat:appcompat:$androidx_appcompat"
+    implementation "androidx.recyclerview:recyclerview:$androidx_core"
+    implementation "androidx.cardview:cardview:$androidx_core"
+    implementation "com.google.android.material:material:$androidx_core"
 
-    implementation "com.android.support.constraint:constraint-layout:$contraint_layout"
+    implementation "androidx.constraintlayout:constraintlayout:$contraint_layout"
 
-    implementation "android.arch.lifecycle:extensions:$android_arch"
-    kapt "android.arch.lifecycle:compiler:$android_arch"
+    implementation "androidx.lifecycle:lifecycle-extensions:$android_arch"
+    kapt "androidx.lifecycle:lifecycle-compiler:$android_arch"
 
-    implementation "android.arch.persistence.room:runtime:$room"
-    kapt "android.arch.persistence.room:compiler:$room"
-    implementation "android.arch.persistence.room:rxjava2:$room"
+    implementation "androidx.room:room-runtime:$room"
+    kapt "androidx.room:room-compiler:$room"
+    implementation "androidx.room:room-rxjava2:$room"
 
     implementation "com.github.bumptech.glide:glide:$glide"
     kapt "com.github.bumptech.glide:compiler:$glide"
@@ -81,7 +81,7 @@ dependencies {
     implementation "com.jakewharton.timber:timber:$timber"
 
     // Force usage of support annotations in the test app, since it is internally used by the runner module.
-    testImplementation "com.android.support:support-annotations:$support"
+    testImplementation "androidx.annotation:annotation:$androidx_core"
     testImplementation "junit:junit:$junit"
     testImplementation "org.mockito:mockito-core:$mockito"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
