--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
     ext.compileSdkVersion=28
     ext.applicationId="com.balch.auctionbrowser"
     ext.minSdkVersion=21
@@ -26,6 +27,12 @@ buildscript {
     ext.assertj="3.5.2"
     ext.contraint_layout= '1.1.3'
     ext.dagger2="2.18"
+    ext.espresso="3.1.1"
+    ext.coreVersion = "1.1.0"
+    ext.extJUnitVersion = "1.1.0"
+    ext.runnerVersion = "1.1.1"
+    ext.rulesVersion = "1.1.1"
+    ext.rxidler = "0.9.1"
 
     repositories {
         jcenter()
