--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,8 @@ android {
         versionCode rootProject.versionCode
         versionName rootProject.versionName
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.balch.auctionbrowser.runner.AuctionTestRunner"
+
 
     }
 
@@ -110,8 +111,10 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso"
     androidTestImplementation "com.squareup.rx.idler:rx2-idler:$rxidler"
-
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:$mockwebserver"
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-reflect:1.3.21"
 }
+
 repositories {
     mavenCentral()
 }
