--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
     ext.compileSdkVersion=28
     ext.applicationId="com.balch.auctionbrowser"
     ext.minSdkVersion=21
@@ -11,7 +12,7 @@ buildscript {
     ext.android_arch= '2.0.0'
     ext.room= '2.0.0'
     ext.gson="2.8.0"
-    ext.okhttp_logging_xcepter="3.8.0"
+    ext.okhttp_logging_xcepter="3.12.1"
     ext.retrofit="2.3.0"
     ext.rxjava2="2.1.0"
     ext.rxandroid="2.1.0"
@@ -26,6 +27,13 @@ buildscript {
     ext.assertj="3.5.2"
     ext.contraint_layout= '1.1.3'
     ext.dagger2="2.18"
+    ext.espresso="3.1.1"
+    ext.coreVersion = "1.1.0"
+    ext.extJUnitVersion = "1.1.0"
+    ext.runnerVersion = "1.1.1"
+    ext.rulesVersion = "1.1.1"
+    ext.rxidler = "0.9.1"
+    ext.mockwebserver = "3.12.1"
 
     repositories {
         jcenter()
