--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,10 @@ dependencies {
     androidTestImplementation "com.squareup.rx.idler:rx2-idler:$rxidler"
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:$mockwebserver"
     androidTestImplementation "org.jetbrains.kotlin:kotlin-reflect:1.3.21"
+
+    kaptAndroidTest "com.google.dagger:dagger-android-processor:$dagger2"
+    kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger2"
+
 }
 
 repositories {
