--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,12 @@ dependencies {
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testImplementation "org.assertj:assertj-core:$assertj"
 
+    implementation "com.uber.autodispose:autodispose-android:$uber_autodispose"
+    implementation "com.uber.autodispose:autodispose-lifecycle:$uber_autodispose"
+    implementation "com.uber.autodispose:autodispose-lifecycle-jdk8:$uber_autodispose"
+    implementation "com.uber.autodispose:autodispose-lifecycle-ktx:$uber_autodispose"
+    implementation "com.uber.autodispose:autodispose-android-archcomponents:$uber_autodispose"
+
     // Testing-only dependencies
     androidTestImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     androidTestImplementation "androidx.test:core:$coreVersion"
