--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,6 +119,8 @@ dependencies {
     androidTestImplementation "androidx.test:runner:$runnerVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso"
+    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:3.1.1"
+
     androidTestImplementation "com.squareup.rx.idler:rx2-idler:$rxidler"
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:$mockwebserver"
     androidTestImplementation "org.jetbrains.kotlin:kotlin-reflect:1.3.21"
