--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
     ext.kotlin_version = '1.3.21'
     ext.android_arch= '2.0.0'
-    ext.room= '2.0.0'
+    ext.room= '2.1.0-beta01'
     ext.gson="2.8.0"
     ext.okhttp_logging_xcepter="3.12.1"
     ext.retrofit="2.3.0"
