--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,15 +62,17 @@ dependencies {
 
     implementation "com.google.code.gson:gson:$gson"
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1'
+
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+
     implementation "com.google.dagger:dagger-android:$dagger2"
     implementation "com.google.dagger:dagger-android-support:$dagger2"
     kapt "com.google.dagger:dagger-android-processor:$dagger2"
     kapt "com.google.dagger:dagger-compiler:$dagger2"
-
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
-    implementation "io.reactivex.rxjava2:rxjava:$rxjava2"
-    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid"
 
     implementation "androidx.legacy:legacy-support-v4:$androidx_core"
     implementation "androidx.appcompat:appcompat:$androidx_appcompat"
@@ -85,10 +87,11 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-extensions:$android_arch"
     kapt "androidx.lifecycle:lifecycle-compiler:$android_arch"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01"
 
     implementation "androidx.room:room-runtime:$room"
+    implementation "androidx.room:room-ktx:$room"
     kapt "androidx.room:room-compiler:$room"
-    implementation "androidx.room:room-rxjava2:$room"
 
     implementation "com.github.bumptech.glide:glide:$glide"
     kapt "com.github.bumptech.glide:compiler:$glide"
@@ -103,12 +106,7 @@ dependencies {
     testImplementation "org.mockito:mockito-core:$mockito"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testImplementation "org.assertj:assertj-core:$assertj"
-
-    implementation "com.uber.autodispose:autodispose-android:$uber_autodispose"
-    implementation "com.uber.autodispose:autodispose-lifecycle:$uber_autodispose"
-    implementation "com.uber.autodispose:autodispose-lifecycle-jdk8:$uber_autodispose"
-    implementation "com.uber.autodispose:autodispose-lifecycle-ktx:$uber_autodispose"
-    implementation "com.uber.autodispose:autodispose-android-archcomponents:$uber_autodispose"
+    testImplementation "androidx.arch.core:core-testing:$android_arch"
 
     // Testing-only dependencies
     androidTestImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -121,13 +119,11 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso"
     androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:3.1.1"
 
-    androidTestImplementation "com.squareup.rx.idler:rx2-idler:$rxidler"
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:$mockwebserver"
-    androidTestImplementation "org.jetbrains.kotlin:kotlin-reflect:1.3.21"
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-reflect:1.3.30"
 
     kaptAndroidTest "com.google.dagger:dagger-android-processor:$dagger2"
     kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger2"
-
 }
 
 repositories {
