--- a/build.gradle
+++ b/build.gradle
@@ -4,39 +4,42 @@ buildscript {
     ext.compileSdkVersion=28
     ext.applicationId="com.balch.auctionbrowser"
     ext.minSdkVersion=21
-    ext.targetSdkVersion=28
+    ext.targetSdkVersion=29
     ext.versionCode=1
     ext.versionName="1.1"
 
-    ext.kotlin_version = '1.3.21'
-    ext.android_arch= '2.0.0'
-    ext.room= '2.1.0-beta01'
-    ext.gson="2.8.0"
-    ext.okhttp_logging_xcepter="3.12.1"
-    ext.retrofit="2.3.0"
-    ext.rxjava2="2.1.0"
-    ext.rxandroid="2.1.0"
-    ext.androidx_core= '1.0.0'
-    ext.androidx_appcompat= '1.0.2'
-    ext.androidx_paging="2.1.0"
-    ext.glide="4.8.0"
-    ext.joda="2.10.1.1"
-    ext.uber_autodispose="1.2.0"
+    ext.kotlin_version = '1.3.72'
+    ext.android_arch= '2.2.0'
+    ext.room= '2.2.5'
+    ext.gson= '2.8.6'
+    ext.okhttp_logging_xcepter= '4.7.2'
+    ext.retrofit= '2.9.0'
+    ext.rxjava2= '2.2.19'
+    ext.rxandroid= '2.1.1'
+    ext.androidx_core= '1.1.0'
+    ext.androidx_appcompat= '1.1.0'
+    ext.androidx_paging= '2.1.2'
+    ext.androidx_cardview= '1.0.0'
+    ext.glide= '4.11.0'
+    ext.joda= '2.10.6'
+    ext.uber_autodispose= '1.4.0'
+    ext.uber_autodispose_ktx= '1.2.0'
+    ext.uber_autodispose_jdk8= '1.2.0'
 
     ext.support_test="0.5"
-    ext.junit="4.12"
-    ext.mockito="2.7.22"
+    ext.junit= '4.13'
+    ext.mockito= '3.3.3'
     ext.timber="4.7.1"
-    ext.assertj="3.5.2"
+    ext.assertj= '3.16.1'
     ext.contraint_layout= '1.1.3'
-    ext.dagger2="2.18"
-    ext.espresso="3.1.1"
-    ext.coreVersion = "1.1.0"
-    ext.extJUnitVersion = "1.1.0"
-    ext.runnerVersion = "1.1.1"
+    ext.dagger2= '2.28'
+    ext.espresso= '3.2.0'
+    ext.coreVersion = '1.2.0'
+    ext.extJUnitVersion = '1.1.1'
+    ext.runnerVersion = '1.2.0'
     ext.rulesVersion = "1.1.1"
-    ext.rxidler = "0.9.1"
-    ext.mockwebserver = "3.12.1"
+    ext.rxidler = '0.11.0'
+    ext.mockwebserver = '4.7.2'
 
     repositories {
         jcenter()
@@ -44,7 +47,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
